# DesignPatterns

./: .gitignore  CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
Tests/SingletonTest/: CMakeLists.txt  SingletonTest.cpp
Tests/src/: SingletonTest.cpp
src/Singleton/: CMakeLists.txt  Connexion.cpp  Connexion.h  Singleton.cpp  Singleton.h
